# erpnext-qonto

./: .cursorrules  .example.env  .gitignore  DEPLOYMENT.md  INSTALLATION_GUIDE.md  MANIFEST.in  MIGRATION_GUIDE.md  README.md  apps-example.json  apps-private-example.json  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: tests.yml
qonto_connector/: hooks.py  modules.txt  patches.txt
qonto_connector/api/: v1.py
qonto_connector/config/: desktop.py  docs.py
qonto_connector/public/css/: qonto.css
qonto_connector/public/js/: qonto_settings.js
qonto_connector/qonto/: client.py  constants.py  exceptions.py  mapping.py  sync.py  utils.py
qonto_connector/qonto_connector/doctype/qonto_account_mapping/: qonto_account_mapping.json  qonto_account_mapping.py
qonto_connector/qonto_connector/doctype/qonto_settings/: qonto_settings.js  qonto_settings.json  qonto_settings.py  test_qonto_settings.py
qonto_connector/qonto_connector/doctype/qonto_sync_log/: qonto_sync_log.json  qonto_sync_log.py
qonto_connector/tests/: conftest.py  test_client.py  test_mapping.py  test_sync.py
tools/: README.md  build-prod-image.ps1  install-qonto-app.ps1  logs-erpnext.ps1  setup-erpnext-docker.ps1  shell-erpnext.ps1  start-erpnext.ps1  stop-erpnext.ps1
