[project]
name = "qonto_connector"
version = "1.0.0"
description = "Sync Qonto bank transactions into ERPNext v15"
authors = [
    { name = "Itanéo", email = "support@itaneo.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0,<3.0.0",
    "frappe",
]
keywords = ["frappe", "erpnext", "qonto", "banking", "integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Frappe",
    "Topic :: Office/Business :: Financial :: Accounting",
]

[project.urls]
Homepage = "https://github.com/itaneo/qonto-connector"
Documentation = "https://github.com/itaneo/qonto-connector#readme"
Repository = "https://github.com/itaneo/qonto-connector"
Issues = "https://github.com/itaneo/qonto-connector/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["qonto_connector/tests"]
pythonpath = ["."]

